--- a/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -23,6 +23,34 @@
             android:iconTintMode="src_in"/>
 
         <item
+            android:id="@+id/consultation"
+            android:title="@string/consultation"
+            android:icon="@drawable/ic_local_library_black_24dp"
+            android:iconTint="@android:color/white"
+            android:iconTintMode="src_in"/>
+
+        <item
+            android:id="@+id/menu_list"
+            android:title="@string/menu_list"
+            android:icon="@drawable/ic_restaurant_menu_black_24dp"
+            android:iconTint="@android:color/white"
+            android:iconTintMode="src_in"/>
+
+        <item
+            android:id="@+id/tips"
+            android:title="@string/tips"
+            android:icon="@drawable/ic_wb_incandescent_black_24dp"
+            android:iconTint="@android:color/white"
+            android:iconTintMode="src_in"/>
+
+        <item
+            android:id="@+id/help"
+            android:title="@string/help"
+            android:icon="@drawable/ic_help_black_24dp"
+            android:iconTint="@android:color/white"
+            android:iconTintMode="src_in"/>
+
+        <item
             android:id="@+id/logout"
             android:title="@string/logout"
             android:icon="@drawable/ic_exit_to_app_black_24dp"
