--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,5 +28,5 @@
     <dimen name="btn_padding_vertical">16dp</dimen>
     <dimen name="edittext_padding">12dp</dimen>
     <dimen name="drawable_padding">12dp</dimen>
-
+    <dimen name="text_input_margin_top">15dp</dimen>
 </resources>
