--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,4 +29,5 @@
     <dimen name="edittext_padding">12dp</dimen>
     <dimen name="drawable_padding">12dp</dimen>
     <dimen name="text_input_margin_top">15dp</dimen>
+    <dimen name="home_icon">60dp</dimen>
 </resources>
