--- a/app/src/main/res/layout/activity_consultation.xml
+++ b/app/src/main/res/layout/activity_consultation.xml
@@ -12,7 +12,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
-        android:text="Masukan jawaban anda dengan benar"
+        android:text="Please answer with your correct answer"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -35,9 +35,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.7"
-            android:hint="Usia Kandungan (Minggu)"
+            android:hint="Pregnancy Age (Weeks)"
             android:text="24"
-            android:inputType="number" />
+            android:inputType="number"/>
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -57,7 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.7"
-            android:hint="Lama Tidur (jam)"
+            android:hint="Bed Time (Hours)"
             android:text="7"
             android:inputType="number" />
     </android.support.design.widget.TextInputLayout>
@@ -79,7 +79,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.7"
-            android:hint="Berat Badan (kg)"
+            android:hint="Body Weight (Kg)"
             android:text="56"
             android:inputType="number" />
 
