--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -119,7 +119,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-            <TextView
+            <!--<TextView
                 android:id="@+id/tv_login_with"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -173,7 +173,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/btn_facebook_login"
-                app:layout_constraintTop_toBottomOf="@+id/tv_login_with" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_login_with" />-->
 
         </android.support.constraint.ConstraintLayout>
 
