--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -245,61 +245,11 @@
                 android:layout_height="1dp"
                 android:layout_marginStart="95dp"
                 android:background="@color/line_color"
-                app:layout_constraintBottom_toTopOf="@+id/rel_five"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rel_four" />
-
-            <RelativeLayout
-                android:id="@+id/rel_five"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rel_four">
-
-                <ImageView
-                    android:id="@+id/im_blood"
-                    android:layout_width="@dimen/profile_icon_size"
-                    android:layout_height="@dimen/profile_icon_size"
-                    android:layout_marginStart="40dp"
-                    android:layout_marginTop="5dp"
-                    android:tint="@android:color/darker_gray"
-                    app:srcCompat="@drawable/ic_blood_black_24dp" />
-
-                <TextView
-                    android:id="@+id/tv_blood"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_toEndOf="@id/im_blood"
-                    android:text="AB"
-                    android:textSize="@dimen/label_size" />
-
-                <TextView
-                    android:id="@+id/tv_blood_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_blood"
-                    android:layout_marginStart="20dp"
-                    android:layout_toEndOf="@+id/im_blood"
-                    android:text="Blood Type"
-                    android:textColor="@android:color/darker_gray"
-                    android:textSize="@dimen/label_size" />
-
-            </RelativeLayout>
-
-            <View
-                android:id="@+id/line5"
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:layout_marginStart="95dp"
-                android:background="@color/line_color"
+                android:visibility="visible"
                 app:layout_constraintBottom_toTopOf="@+id/rel_six"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rel_five" />
+                app:layout_constraintTop_toBottomOf="@+id/rel_four" />
 
             <RelativeLayout
                 android:id="@+id/rel_six"
@@ -308,7 +258,7 @@
                 android:layout_marginTop="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rel_five">
+                app:layout_constraintTop_toBottomOf="@+id/rel_four">
 
                 <ImageView
                     android:id="@+id/im_pregnancy"
@@ -361,7 +311,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/rel_six">
 
                 <ImageView
-                    android:id="@+id/im_weight"
+                    android:id="@+id/im_height"
                     android:layout_width="@dimen/profile_icon_size"
                     android:layout_height="@dimen/profile_icon_size"
                     android:layout_marginStart="40dp"
@@ -370,22 +320,22 @@
                     app:srcCompat="@drawable/ic_account_weight_metre_24dp" />
 
                 <TextView
-                    android:id="@+id/tv_weight"
+                    android:id="@+id/tv_height"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:layout_toEndOf="@+id/im_weight"
-                    android:text="56 Kg"
+                    android:layout_toEndOf="@+id/im_height"
+                    android:text="156 cm"
                     android:textSize="@dimen/label_size" />
 
                 <TextView
-                    android:id="@+id/tv_weight_title"
+                    android:id="@+id/tv_height_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/tv_weight"
+                    android:layout_below="@+id/tv_height"
                     android:layout_marginStart="20dp"
-                    android:layout_toEndOf="@+id/im_weight"
-                    android:text="Body Weight"
+                    android:layout_toEndOf="@+id/im_height"
+                    android:text="Height"
                     android:textColor="@android:color/darker_gray" />
             </RelativeLayout>
 
@@ -406,4 +356,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_edit_black_24dp" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
