--- a/app/src/main/res/layout/item_menu_suggestion_card.xml
+++ b/app/src/main/res/layout/item_menu_suggestion_card.xml
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="6dp"
-                android:text="Saran Menu Sarapan Untuk Anda"
+                android:text="Saran Menu Untuk Anda"
                 android:textSize="16sp" />
 
         </LinearLayout>
